--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -91,7 +91,8 @@ Territorial scope and representative
     a person using electronic communications services to send direct
     marketing communications, or a person using processing and storage capabilities or
     collecting information processed by or emitted by or stored in the end-users’ terminal
-    equipment is not established in the Union it shall designate in writing a representative in the Union.
+    equipment is not established in the Union it shall designate in writing a representative in the Union
+    and communicate it to the competent Supervisory Authority.
 
 2a. The requirements laid down in paragraph 2 shall not apply if activities listed in
     paragraph 1 are occasional and are unlikely to result in a risk to the fundamental
@@ -243,14 +244,7 @@ Permitted processing of electronic communications data
     attacks in the transmission of electronic communications.
 
 (c) it is necessary to detect or prevent security risks or attacks on end-users’
-    terminal equipment;
-
-(d) it is necessary for compliance with a legal obligation to which the provider is subject
-    laid down by Union or Member State law  which
-    respects the essence of the fundamental rights and freedoms and is a necessary and
-    proportionate measure in a democratic society to safeguard the prevention,
-    investigation, detection or prosecution of criminal offences or the execution of
-    criminal penalties, and the safeguarding against and the prevention of threats to public security
+    terminal equipment.
 
 2. Electronic communications data shall only be permitted to be processed for the
     duration necessary for the specified purpose or purposes according to Articles 6 to 6b 
@@ -291,82 +285,43 @@ communications content only:
     networks and services shall be permitted to process electronic communications
     metadata only if:
 
+(a) it is necessary for the purposes of network management or network optimisation, or to
+    meet mandatory technical quality of service requirements pursuant to Directive (EU)
+    2018/1972 or Regulation (EU) 2015/2120; or
+
+(b) it is necessary for calculating interconnection payments or for the
+    performance of an electronic communications service contract to which the end-user
+    is party, in particular if necessary for billing, or if
+    it is necessary for detecting or stopping fraudulent, or abusive use of, or subscription to,
+    electronic communications services; or
+
 (c) the end-user concerned has given consent to the processing of
     communications metadata for one or more specified purposes; or
 
-(ca) it is necessary for the provision of an electronic communications service for which
-    the end-user has concluded a contract; or
+(d) it is necessary in order to protect the vital interest of a natural person; or
 
-(d) it is necessary to protect the vital interest of a natural person, in the case of
-    emergency, in general upon request of a public authority, in accordance with Union or
-    Member State law; or
+(e) it is necessary for statistical counting of electronic communications metadata that
+    constitutes location data, provided that:
+      - such data is pseudonymised;
+      - the processing could not be carried out by processing information that
+        is made anonymous, and the location data is erased or made anonymous
+        when it is no longer needed to fulfil the purpose; and
+      - the location data is not used to determine the nature or characteristics
+        of an end-user or to build a profile of an end-user
 
-(e) it is necessary for the purpose of the legitimate interests pursued by the electronic
-    communications service or network provider, except when such interest is overridden
-    by the interests or fundamental rights and freedoms of the end-user, in particular
-    where the end-user is a child.
+(f) it is necessary for statistical counting other than based on electronic
+    communications metadata that constitute location data or for scientific
+    research, provided such processing is based on Union or Member State law which shall be
+    proportionate to the aim pursued and provide for specific safeguards, including
+    encryption and pseudonymisation, to protect fundamental rights and the interest of
+    the end-users. Processing of electronic communications metadata under this point
+    shall be done in accordance with paragraph 6 of Article 21 and paragraphs 1, 2 and 4
+    of Article 89 of Regulation (EU) 2016/679.
 
-    The end-user’s interests shall be deemed to override the interests of the electronic
-    communications service or network provider if the provider uses the electronic
-    communications metadata to determine the nature and characteristics of the end-user
-    or to build an individual profile of the end-user. The end-user’s interests shall also be
-    deemed to override the interests of the provider if the electronic communications
-    metadata contains special categories of personal data referred to in Article 9(1) of
-    Regulation (EU) 2016/679, unless the conditions set out in Article 9(2)(g) and (j) of
-    Regulation (EU) 2016/679 are met.
-
-2. Electronic communications metadata processed pursuant to paragraph 1(e) shall not
-    be shared by the provider with any third party without prejudice to Article 6(3)
-    unless it has been made anonymous. Prior to processing electronic communications
-    metadata, the provider shall:
-
-(a) carry out an assessment of the impact of envisaged processing on the confidentiality
-    of communications and the privacy of end-users in accordance with Article 35 of
-    Regulation (EU) 2016/679, which may result in the prior consultation of the
-    supervisory authority in accordance with Article 36(1) to (3) of Regulation (EU)
-    2016/679;
-
-(b) inform the end-user of the envisaged processing operations based on paragraph 1(e)
-    and of the end-user’s right to object to such processing, at any time, free of charge
-    and in an easy and effective manner; and
-
-(c) implement appropriate technical and organisational measures, such as
-    pseudonymisation and encryption.
-    
-**Article 6d [NEW]**
-*Processing of electronic communications data for the purpose of preventing child sexual abuse*
-
-1. Without prejudice to Article (6)1, providers of number-independent interpersonal
-    communications services shall be permitted to process electronic communication data
-    for the sole purpose of preventing child sexual abuse and exploitation by detecting,
-    deleting and reporting material as defined in Article 2(c) of Directive 2011/93/EU, if the processing
-    meets all of the following characteristics:
-
-    (i) it creates a unique, non-reconvertible digital signature (“hash”) of material
-        attached to electronic communications for the sole purpose of comparing that
-        hash with a database containing hashes of material previously reliably identified
-        as constituting material defined in Article 2(c) of Directive 2011/93/EU;
-
-    (ii) electronic communications data and hashes of material attached to electronic
-        communications are erased immediately after comparison with the database
-        except in the cases where material constituting material defined in Article 2(c)
-        of Directive 2011/93/EU has been detected by virtue of a hash;
-
-2. The provider of number-independent interpersonal communications services
-    shall, prior to processing, carry out an assessment of the impact and consult the
-    supervisory authority, in accordance with Article 35 and 36 of Regulation (EU)
-    2016/679. The assessment of impact shall include a description of the processing
-    activities concerning both automatic and manual processing of the data,
-    including description of possible algorithms or databases used for the
-    processing and means to limit the rate of erroneous detection of material
-    constituting defined in Article 2(c) of Directive 2011/93/EU and of the security measures, including
-    limitation of personnel authorised to access electronic communications data, set
-    up to protect end-users not involved in the communication of material
-    consituting defined in Article 2(c) of Directive 2011/93/EU, and to protect the consulted content.
-
-3. The provider of number-independent interpersonal communications services
-    shall inform the users about the processing taking place in accordance with this
-    article and provide suitable complaint procedure.]
+2a. Data processed under point e and f of paragraph 1 of this article may also be used for
+    the production and disseminationof official national and European statistics to the
+    extent necessary for this purpose and in accordance, respectively, with national law
+    and Regulation 223/2009/EC.
 
 ```
 Article 7
@@ -376,21 +331,15 @@ Storage and erasure of electronic communications data
     communications content or make that data anonymous when it is no longer necessary for
     the purpose of processing in accordance to article 6(1) and 6a(1).
 
-2. Without prejudice to points (b), (c) and (d) of Article 6(1), points (c), (ca), (d) and (e) of Article 6b(1),
+2. Without prejudice to points (b), (c) and (d) of Article 6(1), points (c), (d), (e), (f) and of Article 6b,
     the provider of the electronic communications service shall erase electronic
     communications metadata or make that data anonymous when it is no longer needed
     for the purpose of the transmission of a communication.
 
 3. Where the processing of electronic communications metadata takes place for the
-    purpose of billing, the relevant metadata
+    purpose of billing in accordance with point (b) of Article 6b, the relevant metadata
     may be kept until the end of the period during which a bill may lawfully be
     challenged or a payment may be pursued in accordance with national law.
-
-4. Union or Member state law may provide that the electronic communications metadata 
-    is retained, to safeguard the prevention, investigation, detection or prosecution 
-    of criminal offences or the execution of criminal penalties, and the safeguarding
-    against and the prevention of threats to public security, for a limited period that
-    is longer than the period set out in this Article .
 
 ```
 Article 8
@@ -406,50 +355,30 @@ Protection of end-users' terminal equipment information
 
 (b) the end-user has given his or her consent; or
 
-(c) it is necessary for providing a service requested by the end-user; or
+(c) it is technically necessary for providing a service specifically requested by the end-user; or
 
 (d) it is necessary for audience measuring, provided that such measurement is
     carried out by the provider of the information society service requested by the end-
-    user or by a third party, or by third parties jointly, on behalf of one or more providers of the information society service 
-    provided that conditions laid down in Article 28, or where applicable Article 26,
+    user, or by the provider of a television broadcasting service, as defined in Article 1(1) (e)
+    of Directive 2010/13/EU14, or by a third party on behalf of or jointly with one or more
+    providers of the information society service requested or of the television broadcasting service
+    provided that the conditions laid down in Article 28, or where applicable Article 26,
     of Regulation (EU) 2016/679 are met; or
+
+(da) it is necessary to maintain or restore the security of information society services or
+    terminal equipment of the end-user, prevent fraud or detect technical faults for the
+    duration necessary for that purpose; or
+
+(e) it is necessary for a software update provided that:
+    (i) such update is necessary for security reasons and does not in any way change the
+    privacy settings chosen by the end-user are not changed in any way,
+    (ii) the end-user is informed in advance each time an update is being installed, and
+    (iii) the end-user is given the possibility to postpone or turn off the automatic
+    installation of these updates; or
 
 (f) it is necessary to locate terminal equipment when an end-user makes an emergency
     communication either to the single European emergency number ‘112’ or a national
     emergency number, in accordance with Article 13(3).
-
-(g) it is necessary for the purpose of the legitimate interests pursued by a service
-    provider to use processing and storage capabilities of terminal equipment or to collect
-    information from an end-user’s terminal equipment, except when such interest is
-    overridden by the interests or fundamental rights and freedoms of the end-user.
-    The end-user’s interests shall be deemed to override the interests of the service
-    provider where the end-user is a child or where the service provider processes, stores
-    or collects the information to determine the nature and characteristics of the end-user
-    or to build an individual profile of the end-user or the processing, storage or
-    collection of the information by the service provider contains special categories of
-    personal data as referred to in Article 9(1) of Regulation (EU) 2016/679.
-
-1a. Service providers using processing and storage capabilities of the end-user’s terminal
-    equipment or collecting information from the end-user’s terminal equipment
-    pursuant to paragraph 1(g) shall not share the information with any third party other
-    than its processors, acting in accordance with Article 28 of Regulation (EU) 2016/679
-    mutatis mutandis, unless it has been made anonymous. Prior to any use of processing
-    or storage facilities in, or collection of information from the end-user’s terminal
-    equipment, the service provider shall:
-
-(a) carry out an assessment of the impact of the use of the processing and storage
-    capabilities or the collection of information from the end-users’ terminal equipment
-    and of the envisaged processing on the confidentiality of communications and the
-    privacy of end-users in accordance with Article 35 of Regulation (EU) 2016/679,
-    which may result in the prior consultation of the supervisory authority in accordance
-    with Article 36(1) to (3) of Regulation (EU) 2016/679;
-
-(b) inform the end-user of the envisaged processing operations based on paragraph 1(g)
-    and of the end-user’s right to object to such processing, free of charge, at any time,
-    and in an easy and effective manner; and
-
-c) implement appropriate technical and organsational measures, such as
-    pseudonymisation and encryption.
 
 2. The collection of information emitted by terminal equipment of the end-user to enable it to connect
     to another device and, or to network equipment shall be prohibited, except on the
@@ -668,7 +597,7 @@ Unsolicited and direct marketing communications
 
 3. Without prejudice to paragraphs 1 and 2, natural or legal persons using electronic
     communications services for the purposes of placing direct marketing calls shall
-    present the calling line identification on which they can be contacted.
+    present the calling line identification assigned to them.
 
 3a. Member States may require natural or legal person using electronic
     communications services for the purposes of placing direct marketing calls to
@@ -728,7 +657,7 @@ Supervisory authorities
 
 1b. Where more than one supervisory authority is responsible for monitoring the
     application of this Regulation in a Member State, such authorities shall cooperate
-    with each other. 
+    with each other to the extent necessary to perform their tasks.
 
 2. Where the supervisory authorities are not the 
     supervisory authorities responsible for monitoring the application of Regulation 
@@ -748,7 +677,8 @@ European Data Protection Board
 
 (a) advise the Commission on any proposed amendment of this Regulation;
 
-(b) examine, on its own initiative, on request of one of its members or on request of the
+(b) examine, on its own initiative, on request of a supervisory authority
+    designated in accordance with Article 18(0) or on request of the
     Commission, any question covering the application of this Regulation in relation to
     Chapters I II and III and issue guidelines, recommendations and best practices in order to encourage consistent
     application of this Regulation.
