--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -36,15 +36,16 @@ Material Scope
 
 (b) end-users' terminal equipment information.
 
-(d) the offering of a publicly available directory of end-users of electonic communications
+(c) the offering of a publicly available directory of end-users of electonic communications
     services;
 
-(e) the sending of direct marketing communications to end-users.
+(d) the sending of direct marketing communications to end-users.
 
 2. This Regulation does not apply to:
 
-(a) activities which fall outside the scope of Union law and in any event
-    activities concerning national security and defence;
+(a) activities which fall outside the scope of Union law and in any event to
+    processing operations activities concerning national security and defence
+    and defence, regardless of the person carrying out those operations;
 
 (b) activities of the Member States which fall within the scope of Chapter 2 of Title V of
     the Treaty on European Union;
@@ -91,7 +92,8 @@ Territorial scope and representative
     a person using electronic communications services to send direct
     marketing communications, or a person using processing and storage capabilities or
     collecting information processed by or emitted by or stored in the end-users’ terminal
-    equipment is not established in the Union it shall designate in writing a representative in the Union
+    equipment is not established in the Union it shall designate in writing within one month
+    from the start of its activities, a representative in the Union
     and communicate it to the competent Supervisory Authority.
 
 2a. The requirements laid down in paragraph 2 shall not apply if activities listed in
@@ -110,6 +112,10 @@ Territorial scope and representative
 5. The designation of a representative pursuant to paragraph 2 shall be without
     prejudice to legal actions, which could be initiated against the provider or person it
     represents.
+
+6. This Regulation applies to the processing of personal data by a controller not
+    established in the Union, but in a place where Member State law applies by
+    virtue of public international law. 
 
 ```
 Article 4
@@ -136,7 +142,7 @@ Definitions
     interactive communication merely as a minor ancillary feature that is intrinsically
     linked to another service.
  
-    For the purposes of this Regulation, the definition of 'processing' referred to in
+2a. For the purposes of this Regulation, the definition of 'processing' referred to in
     Article 4(2) of Regulation 2016/679 shall not be limited to processing of personal data.
 
 3. In addition, for the purposes of this Regulation the following definitions shall apply:
@@ -184,6 +190,11 @@ Definitions
 (i) 'direct marketing calls' means direct marketing voice-to-voice calls and calls made
     via automated calling and communication systems for the purpose of direct
     marketing.
+
+(j) 'location data' means data processed by means of an electronic
+    communications network or service, indicating the geographic position of the
+    terminal equipment of a user of a publicly available electronic
+    communications service;
 
 ```
 Article 4a
@@ -237,7 +248,7 @@ Permitted processing of electronic communications data
 1. Providers of electronic communications networks and services shall be permitted to process
     electronic communications data only if:
 
-(a) it is necessary to achieve the transmission of the electronic communication; or
+(a) it is necessary to provide an electronic communication service; or
 
 (b) it is necessary to maintain or restore the security of electronic communications
     networks and services, or detect technical faults and/or errors and/or security risks and/or
@@ -245,6 +256,14 @@ Permitted processing of electronic communications data
 
 (c) it is necessary to detect or prevent security risks or attacks on end-users’
     terminal equipment.
+
+(d) it is necessary for compliance with a legal obligation to which the provider is
+    subject laid down by Union or Member State law in accordance with Article
+    11, which respects the essence of the fundamental rights and freedoms and is
+    a necessary and proportionate measure in a democratic society to safeguard
+    the prevention, investigation, detection or prosecution of criminal offences or
+    the execution of criminal penalties, and the safeguarding against and the
+    prevention of threats to public security.
 
 2. Electronic communications data shall only be permitted to be processed for the
     duration necessary for the specified purpose or purposes according to Articles 6 to 6b 
@@ -289,10 +308,9 @@ communications content only:
     meet mandatory technical quality of service requirements pursuant to Directive (EU)
     2018/1972 or Regulation (EU) 2015/2120; or
 
-(b) it is necessary for calculating interconnection payments or for the
-    performance of an electronic communications service contract to which the end-user
-    is party, in particular if necessary for billing, or if
-    it is necessary for detecting or stopping fraudulent, or abusive use of, or subscription to,
+(b) it is necessary forperformance of an electronic communications service contract to which the
+    end-user is party or if necessary for billing, calculating interconnection payments, 
+    detecting or stopping fraudulent, or abusive use of, or subscription to,
     electronic communications services; or
 
 (c) the end-user concerned has given consent to the processing of
@@ -300,18 +318,18 @@ communications content only:
 
 (d) it is necessary in order to protect the vital interest of a natural person; or
 
-(e) it is necessary for statistical counting of electronic communications metadata that
+(e) it is necessary for statistical purposes of electronic communications metadata that
     constitutes location data, provided that:
-      - such data is pseudonymised;
-      - the processing could not be carried out by processing information that
+    i. such data is pseudonymised;
+    ii. the processing could not be carried out by processing information that
         is made anonymous, and the location data is erased or made anonymous
         when it is no longer needed to fulfil the purpose; and
-      - the location data is not used to determine the nature or characteristics
+    iii. the location data is not used to determine the nature or characteristics
         of an end-user or to build a profile of an end-user
 
-(f) it is necessary for statistical counting other than based on electronic
+(f) it is necessary for statistical purposes other than based on electronic
     communications metadata that constitute location data or for scientific
-    research, provided such processing is based on Union or Member State law which shall be
+    research purposes, provided such processing is based on Union or Member State law which shall be
     proportionate to the aim pursued and provide for specific safeguards, including
     encryption and pseudonymisation, to protect fundamental rights and the interest of
     the end-users. Processing of electronic communications metadata under this point
@@ -320,8 +338,94 @@ communications content only:
 
 2a. Data processed under point e and f of paragraph 1 of this article may also be used for
     the production and disseminationof official national and European statistics to the
-    extent necessary for this purpose and in accordance, respectively, with national law
-    and Regulation 223/2009/EC.
+    extent necessary for this purpose and in accordance, respectively, with national or Union law.
+
+2. Electronic communications metadata processed pursuant to paragraph 1 (e)
+    shall not be shared by the provider with any third party without prejudice to
+    Article 6 (3) unless it has been made anonymous. Prior to processing
+    electronic communications metadata, the provider shall:
+
+(a) carry out an assessment of the impact of envisaged processing on the
+    confidentiality of communications and the privacy of end-users in
+    accordance with Article 35 of Regulation (EU) 2016/679, which may result in
+    the prior consultation of the supervisory authority in accordance with Article
+    36(1) to (3) of Regulation (EU) 2016/679;
+
+(b) inform the end-user of the envisaged processing operations based on
+    paragraph 1(e) and of the end-user’s right to object to such processing, at
+    any time, free of charge and in an easy and effective manner; and
+
+(c) implement appropriate technical and organisational measures, such as
+    pseudonymisation and encryption.
+
+**Article 6c [Previous art 6(2a)]**
+*Compatible processing of electronic communications metadata*
+
+1. Where the processing for a purpose other than that for which the electronic
+    communications metadata have been collected under paragraphs 1 and 2 of
+    Articles 6 and 6b is not based on the end-user's consent or on a Union or
+    Member State law which constitutes a necessary and proportionate measure
+    in a democratic society to safeguard the objectives referred to in Article 11,
+    the provider of electronic communications networks and services shall, in
+    order to ascertain whether processing for another purpose is compatible with
+    the purpose for which the electronic communications metadata are initially
+    collected, take into account, inter alia:
+
+(a) any link between the purposes for which the electronic communications
+    metadata have been collected and the purposes of the intended further
+    processing;
+
+(b) the context in which the electronic communications metadata have been
+    collected, in particular regarding the relationship between end-users
+    concerned and the provider;
+
+(c) the nature of the electronic communications metadata as well as the
+    modalities of the intended further processing, in particular where such data
+    or the intended further processing could reveal categories of data, pursuant
+    to Articles 9 or 10 of Regulation (EU) 2016/679;
+
+(d) the possible consequences of the intended further processing for end-users;
+
+(e) the existence of appropriate safeguards, such as pseudonymisation and
+    encryption.
+
+2. Such processing, if considered compatible, may only take place, provided
+    that:
+
+(a) the processing could not be carried out by processing information that is
+    made anonymous, and electronic communications metadata is erased or
+    made anonymous as soon as it is no longer needed to fulfil the purpose, and
+
+(b) the processing is limited to electronic communications metadata that is
+    pseudonymised, and
+
+(c) the electronic communications metadata is not used to determine the nature
+    or characteristics of an end-user or to build a profile of an end-user, which
+    produces legal effects concerning him or her or similarly significantly affects
+    him or her.
+
+3. For the purposes of paragraph 1 this Article, the providers of electronic
+    communications networks and services shall:
+
+(a) exclude electronic communications metadata that constitue location data that
+    reveal special categories of personal data pursuant to Article 9 of Regulation
+    (EU) 2016/679 from processing;
+
+(b) not share such data with third parties, unless it is made anonymous;
+
+(c) prior to the processing carry out an assessment of the impact of the envisaged
+    processing operations on the protection of electronic communications data in
+    accordance with Article 35 of Regulation (EU) 2016/679, which may result in
+    the prior and consultation of the supervisory authority in accordance with
+    Article 36(1) to (3) of Regulation (EU) 2016/679. Points (2) and (3) of Article
+    36(2) and (3) of Regulation (EU) 2016/679 shall apply to the consultation of
+    the supervisory authority; and
+
+(d) inform the end-user of specific processing on the basis of paragraph 1 of this
+    Article and give of the right to object to such processing free of charge, at any
+    time, and in an easy and effective manner. If the end-user objects, the
+    electronic communications metadata shall no longer be processed for such
+    purposes.
 
 ```
 Article 7
@@ -332,7 +436,7 @@ Storage and erasure of electronic communications data
     the purpose of processing in accordance to article 6(1) and 6a(1).
 
 2. Without prejudice to points (b), (c) and (d) of Article 6(1), points (c), (d), (e), (f) and of Article 6b,
-    the provider of the electronic communications service shall erase electronic
+    and Article 6c, the provider of the electronic communications service shall erase electronic
     communications metadata or make that data anonymous when it is no longer needed
     for the purpose of the transmission of a communication.
 
@@ -353,15 +457,14 @@ Protection of end-users' terminal equipment information
 (a) it is necessary for the sole purpose of carrying out the transmission of an electronic
     communication over an electronic communications network; or
 
-(b) the end-user has given his or her consent; or
+(b) the end-user has given consent; or
 
-(c) it is technically necessary for providing a service specifically requested by the end-user; or
+(c) it is necessary for providing a service specifically requested by the end-user; or
 
 (d) it is necessary for audience measuring, provided that such measurement is
-    carried out by the provider of the information society service requested by the end-
-    user, or by the provider of a television broadcasting service, as defined in Article 1(1) (e)
-    of Directive 2010/13/EU14, or by a third party on behalf of or jointly with one or more
-    providers of the information society service requested or of the television broadcasting service
+    carried out by the provider of the service requested by the end-
+    user, or by a third party on behalf of or jointly with one or more
+    providers of the service requested or
     provided that the conditions laid down in Article 28, or where applicable Article 26,
     of Regulation (EU) 2016/679 are met; or
 
@@ -380,6 +483,89 @@ Protection of end-users' terminal equipment information
     communication either to the single European emergency number ‘112’ or a national
     emergency number, in accordance with Article 13(3).
 
+(g1) it is necessary for a purpose other than that for which the information have
+    been collected under this Regulation. Where it is not based on the end-user's
+    consent or on a Union or Member State law which constitutes a necessary
+    and proportionate measure in a democratic society to safeguard the
+    objectives referred to in Article 11 the person using processing and storage
+    capabilities or collecting information processed by or emitted by or stored in
+    the end-users’ terminal equipment shall, in order to ascertain whether
+    processing for another purpose is compatible with the purpose for which the
+    electronic communications data are initially collected, take into account, inter
+    alia:
+
+(i) any link between the purposes for which the processing and storage
+    capabilities have been used or the information have been collected and
+    the purposes of the intended further processing;
+
+(ii) the context in which the processing and storage capabilities have been
+    used or the information have been collected, in particular regarding the
+    relationship between end-users concerned and the provider;
+
+(iii) the nature the processing and storage capabilities or of the collecting of
+    information as well as the modalities of the intended further processing,
+    in particular where such intended further processing could reveal
+    categories of data, pursuant to Article 9 or 10 of Regulation (EU)
+    2016/679;
+
+(iv) the possible consequences of the intended further processing for endusers;
+
+(v) the existence of appropriate safeguards, such as pseudonymisation and
+    encryption.
+
+g2. Such further processing, if considered compatible, may only take place,
+    provided that:
+
+(i) the information is erased or made anonymous as soon as it is no longer
+    needed to fulfil the purpose,
+
+(ii) the processing is limited to information that is pseudonymised, and
+
+(ii) the information is not used to determine the nature or characteristics of
+    an end-user or to build a profile of an end-user.
+
+g3. For the purposes of this Article, the person using processing and storage
+    capabilities or collecting information processed by or emitted by or stored in the
+    end-users’ terminal equipment shall:
+
+(i) not share such information with third parties, unless it is made anonymous;
+
+(ii) prior to the processing carry out an assessment of the impact of the
+    envisaged processing operations on the protection of electronic
+    communications data in accordance with Article 35 of Regulation (EU)
+    2016/679, which may result in the prior and consultation of the supervisory
+    authority in accordance with Article 36(1) to (3) of Regulation (EU)
+    2016/679; and
+
+(iii) inform the end-user of specific processing on the basis of this Article and
+    of the right to object to such processing free of charge, at any time, and in
+    an easy and effective manner. If the end-user objects, the information shall
+    no longer be processed for such purposes.
+
+g4. Service providers using processing and storage capabilities of the end-user’s
+    terminal equipment or collecting information from the end-user’s terminal
+    equipment pursuant to paragraph 1(g) shall not share the information with
+    any third party other than its processors, acting in accordance with Article
+    28 of Regulation (EU) 2016/679 mutatis mutandis, unless it has been made
+    anonymous. Prior to any use of processing or storage facilities in, or
+    collection of information from the end-user’s terminal equipment, the service
+    provider shall:
+
+i carry out an assessment of the impact of the use of the processing and storage
+    capabilities or the collection of information from the end-users’ terminal
+    equipment and of the envisaged processing on the confidentiality of
+    communications and the privacy of end-users in accordance with Article 35
+    of Regulation (EU) 2016/679, which may result in the prior consultation of
+    the supervisory authority in accordance with Article 36(1) to (3) of
+    Regulation (EU) 2016/679;
+
+ii inform the end-user of the envisaged processing operations based on
+    paragraph 1(g) and of the end-user’s right to object to such processing, free
+    of charge, at any time, and in an easy and effective manner; and
+
+iii implement appropriate technical and organisational measures, such as
+    pseudonymisation and encryption.
+
 2. The collection of information emitted by terminal equipment of the end-user to enable it to connect
     to another device and, or to network equipment shall be prohibited, except on the
 	following grounds:
@@ -387,9 +573,9 @@ Protection of end-users' terminal equipment information
 (a) it is done exclusively in order to, for the time necessary for, and for the purpose of
     establishing or maintaining a connection; or
 
-(b) the end-user has given his or her consent; or
+(b) the end-user has given consent; or
 
-(c) it is necessary for the purpose of statistical counting that is limited in time and space
+(c) it is necessary for the purpose of statistical purposes that is limited in time and space
     to the extent necessary for this purpose and the data is made anonymous or erased as
     soon as it is no longer needed for this purpose.
 
@@ -711,9 +897,7 @@ European Data Protection Board
     practices to the Commission and make them public.
 
 5. The Board shall consult the supervisory authorities referred to in Article 18(0) before
-    excercising any of the tasks referred to in paragraph 2 where those authorities are not
-    the authorities responsible for monitoring the application of Regulation (EU)
-    2016/679
+    any of the tasks referred to in paragraph 2.
 
 6. The Board shall, where appropriate, consult interested parties and give them the
     opportunity to comment within a reasonable period. The Board shall, without
@@ -738,11 +922,11 @@ Remedies
 ```
 1. Without prejudice to any other administrative or judicial remedy, every end-user 
     services shall have the right to an effective judicial remedy in
-    relation to any infringement of his or her rights under this Regulation, the right to
+    relation to any infringement of rights under this Regulation, the right to
     lodge a complaint with a supervisory authority and the right to an effective judicial
     remedy against any decision of a supervisory authority. 
 
-    Articles 77-80 of Regulation (EU) 2016/679 shall apply mutatis mutandis.
+1a. Articles 77-80 of Regulation (EU) 2016/679 shall apply mutatis mutandis.
 
 2. Any natural or legal person other than end-users adversely affected by infringements
     of this Regulation, including a provider of electronic communications services
@@ -776,6 +960,8 @@ General conditions for imposing administrative fines
 
 (d) the obligations of any legal or natural person who uses electronic communications
     services pursuant to Article 16.
+
+(e) the obligation to designate a representative pursuant to Article 3 number 2
 
 3. Infringements of the principle of confidentiality of communications, permitted
     processing of electronic communications data, time limits for erasure pursuant to
@@ -823,7 +1009,7 @@ Penalties
     and dissuasive.
 
 2. Each Member State shall notify to the Commission the provisions of its law which it
-    adopts pursuant to paragraph 1, no later than 18 months after the date set forth under
+    adopts pursuant to paragraph 1, no later than 8 months after the date set forth under
     Article 29(2) and, without delay, any subsequent amendment affecting them.
 
 ## CHAPTER VI
@@ -883,7 +1069,7 @@ Committee
 Article 27
 Repeal
 ```
-1. Directive 2002/58/EC is repealed with effect from [25 May 2018].
+1. Directive 2002/58/EC is repealed with effect from [1 August 2022].
 
 2. References to the repealed Directive shall be construed as references to this
     Regulation.
@@ -892,7 +1078,7 @@ Repeal
 Article 28
 Monitoring and evaluation clause
 ```
-By [1 January 2018] at the latest, the Commission shall establish a detailed programme for
+By [1 August 2024] at the latest, the Commission shall establish a detailed programme for
 monitoring the effectiveness of this Regulation.
 
 No later than three years after the date of application of this Regulation, and every three years
@@ -908,7 +1094,7 @@ Entry into force and application
 1. This Regulation shall enter into force on the twentieth day following that of its
     publication in the _Official Journal of the European Union_.
 
-2. This Regulation shall apply from [24 months from the date of entry into force of this Regulation].
+2. This Regulation shall apply from [12 months from the date of entry into force of this Regulation].
 
 This Regulation shall be binding in its entirety and directly applicable in all Member States.
 
